Added Test cases for COntroller and Service, new jar